refactor: rework exception handling
2) return errors in a structured way in a response

refs: TMI-316